--- a/alacritty.toml
+++ b/alacritty.toml
@@ -21,7 +21,7 @@ size = 16  # Adjust this value as per your preference
 [window]
 opacity=0.7
 dynamic_padding=true
-blur=true
+blur=false
 
 
 [window.dimensions]
