--- a/alacritty_windows.toml
+++ b/alacritty_windows.toml
@@ -22,7 +22,7 @@ size = 16  # Adjust this value as per your preference
 
 # Set window size
 [window]
-opacity=0.7
+opacity=0.95
 dynamic_padding=true
 blur=false
 
@@ -40,6 +40,8 @@ y=2
 
 # Offset is the extra space around each character.
 [font.offset]
+
+
 x = 0
 y = 0
 
@@ -47,3 +49,8 @@ y = 0
 [font.glyph_offset]
 x = 0
 y = 0
+
+
+import = [
+    "~/.config/alacritty/themes/themes/palenight.toml"
+]
