--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,52 +1,169 @@
-# import alacritty theme
-# import = ["/Users/dracuusta/Downloads/alacritty-master/dracula.toml"]
-# [shell]
-# program = "/bin/zsh"
-# args = [ "--login", "-c", "tmux new-session -A -s my_session" ]
+# Colors (Gruvbox dark)
+
+# Default colors
+[colors.primary]
+# hard contrast background = = '#1d2021'
+background = '#282828'
+# soft contrast background = = '#32302f'
+foreground = '#ebdbb2'
+
+# Normal colors
+[colors.normal]
+black   = '#282828'
+red     = '#cc241d'
+green   = '#98971a'
+yellow  = '#d79921'
+blue    = '#458588'
+magenta = '#b16286'
+cyan    = '#689d6a'
+white   = '#a89984'
+
+# Bright colors
+[colors.bright]
+black   = '#928374'
+red     = '#fb4934'
+green   = '#b8bb26'
+yellow  = '#fabd2f'
+blue    = '#83a598'
+magenta = '#d3869b'
+cyan    = '#8ec07c'
+white   = '#ebdbb2'
 
 [env]
 TERM = "xterm-256color"
 
+
 [font]
 # The normal (roman) font face to use.
-normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
+normal = { family = "JetBrains Mono", style = "Regular" }
+
+size = 16.0
 
 # The bold font face
-bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
+bold = { family = "JetBrains Mono", style = "Bold" }
 
 # The italic font face
-italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
+italic = { family = "JetBrains Mono", style = "Italic" }
 
-# Point size of the font
-size = 16  # Adjust this value as per your preference
-
-
-# Set window size
-[window]
-opacity=0.7
-dynamic_padding=true
-blur=false
-
-
-[window.dimensions]
-columns= 160
-lines=45
-
-
-[window.padding]
-x=10
-y=2
-
-
-
-# Offset is the extra space around each character.
 [font.offset]
 x = 0
-y = 0
+y = 1
 
-# Glyph offset determines the locations of the glyphs within their cells.
-[font.glyph_offset]
-x = 0
-y = 0
+[[keyboard.bindings]]
+action = "Paste"
+key = "V"
+mods = "Control|Shift"
 
+[[keyboard.bindings]]
+action = "Copy"
+key = "C"
+mods = "Control|Shift"
 
+[[keyboard.bindings]]
+action = "PasteSelection"
+key = "Insert"
+mods = "Shift"
+
+[[keyboard.bindings]]
+action = "ResetFontSize"
+key = "Key0"
+mods = "Control"
+
+[[keyboard.bindings]]
+action = "IncreaseFontSize"
+key = "Equals"
+mods = "Control"
+
+[[keyboard.bindings]]
+action = "IncreaseFontSize"
+key = "Plus"
+mods = "Control"
+
+[[keyboard.bindings]]
+action = "DecreaseFontSize"
+key = "Minus"
+mods = "Control"
+
+[[keyboard.bindings]]
+action = "DecreaseFontSize"
+key = "Minus"
+mods = "Control"
+
+[[keyboard.bindings]]
+action = "ToggleFullscreen"
+key = "F11"
+mods = "None"
+
+[[keyboard.bindings]]
+action = "Paste"
+key = "Paste"
+mods = "None"
+
+[[keyboard.bindings]]
+action = "Copy"
+key = "Copy"
+mods = "None"
+
+[[keyboard.bindings]]
+action = "ClearLogNotice"
+key = "L"
+mods = "Control"
+
+[[keyboard.bindings]]
+chars = "\f"
+key = "L"
+mods = "Control"
+
+[[keyboard.bindings]]
+action = "ScrollPageUp"
+key = "PageUp"
+mode = "~Alt"
+mods = "None"
+
+[[keyboard.bindings]]
+action = "ScrollPageDown"
+key = "PageDown"
+mode = "~Alt"
+mods = "None"
+
+[[keyboard.bindings]]
+action = "ScrollToTop"
+key = "Home"
+mode = "~Alt"
+mods = "Shift"
+
+[[keyboard.bindings]]
+action = "ScrollToBottom"
+key = "End"
+mode = "~Alt"
+mods = "Shift"
+
+[[keyboard.bindings]]
+chars = "\u001BF"
+key = "Right"
+mods = "Alt"
+
+[[keyboard.bindings]]
+chars = "\u001BB"
+key = "Left"
+mods = "Alt"
+
+[scrolling]
+history = 5000
+
+[window]
+dynamic_padding = true
+title = "Alacritty"
+opacity=0.8
+
+[window.class]
+general = "Alacritty"
+instance = "Alacritty"
+
+[window.dimensions]
+columns= 133
+lines= 40
+
+[window.padding]
+x = 6
+y = 6
