--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,10 +31,6 @@ bind-key -T copy-mode-vi L send-keys -X end-of-line
 bind-key -T copy-mode-vi H send-keys -X back-to-indentation
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xcip -in -selection clipboard"
 
-set-option -g status-style bg=colour237,fg="#5eacd3"
-set-option -g window-status-current-style bg=colour239,fg="#5eacd3"
-set-option -g window-status-current-format " #I:#W "
-set -g message-style 'bg=colour239 fg=#5eacd3'
 
 set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ',alacritty:RGB'
@@ -43,5 +39,20 @@ set-option -g focus-events on
 set -g base-index 1
 
 set -g mouse on
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @plugin 'egel/tmux-gruvbox'
+# set desired theme options...
+set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
